[package]
name = "pathfinding-test"
version = "0.1.0"
authors = ["Elabajaba <Elabajaba@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "4.0.2"
env_logger = "0.9.0"
hashbrown = "0.11.2"
hierarchical_pathfinding = { git = "https://github.com/Elabajaba/hierarchical_pathfinding", branch = "slotmap", version = "*", features = [
    "log",
] }
# hierarchical_pathfinding = "0.4"
# hierarchical_pathfinding = { version="*", path="../hierarchical_pathfinding" }
log = "0.4.14"
oorandom = "11.1.3"
pathfinding = "2.2.1"
petgraph = "0.6.0"
# profiling = { version="1.0.3", features=["profile-with-optick"] }

[profile.release]
lto = "thin"
